content/customizations/kubernetes-dashboard.files/k8s-dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`dashboard.vlab.lcl`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      kind: Service
      namespace: kubernetes-dashboard
      port: 443
    middlewares:
    - name: basic-admin-auth
    serversTransport:
      insecureSkipVerify: true
